test/compilable/imports/imp21539b.d
module imports.imp21539b;

struct File {}

private struct PrivateFile {}
