test/fail_compilation/imports/test2830b.d
module imports.test2830b;

private union TestUnion
{
}
